src/css/imports/layout.css
html {
  background-color: var(--white);
}

.wrapper {
  margin: 0 2.4rem 0 4.8rem;
  @media (--medium) {
    max-width: 50rem;
    margin: auto;
  }
  @media (--large) {
    max-width: 75rem;
    margin: auto;
  }
  @media (--xlarge) {
    max-width: 100rem;
    margin: auto;
  }
}

.logo {
  height: 3rem;
  perspective: 100rem;
  @media (--medium) {
    width: 20rem;
  }
}

.hero {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 80vh;
  padding-top: 20vh;
}

.hero--index {
  height: 100vh;
}

.hero__details {
  position: absolute;
  bottom: 1.6rem;
}

.logotype {
  position: fixed;
  text-transform: uppercase;
  margin: 2.4rem;
  font-size: 2.4rem;
}

.logotype--rotate-left {
  transform: rotate(90deg);
  transform-origin: left top 0;
  margin-left: 2.4rem;
}

.logotype--fixed {
  position: fixed;
}

header {
  padding: 2.4rem;
  border-bottom: 1px var(--black) solid;
  position: absolute;
  width: 100%;
}

/*TODO: NAV BURGER*/
nav {
  float: right;
  display: none;
}

section {
  margin: 8.8rem 0 4rem 0;
}

.content__list {
  margin: 3.2rem 0;
}

.content__list:first-of-type {
  margin: 4.8rem 0 0 0;
}

.content__thumb {
  padding: 0 0 0.8rem 0;
}

img {
  display: block;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

